--- a/index.html
+++ b/index.html
@@ -57,105 +57,47 @@
 <body >
     <div id="result"></div>
     <input type="checkbox" id="ac-gn-menustate" class="ac-gn-menustate" />
-    <nav id="ac-globalnav" class="no-js">
-        <div class="ac-gn-content">
-            <ul class="ac-gn-header">
-                <li class="ac-gn-item ac-gn-menuicon">
-                    <label class="ac-gn-menuicon-label" for="ac-gn-menustate" aria-hidden="true">
-					 <span class="ac-gn-menuicon-bread ac-gn-menuicon-bread-top">
-						 <span class="ac-gn-menuicon-bread-crust ac-gn-menuicon-bread-crust-top"></span>
-					 </span>
-					 <span class="ac-gn-menuicon-bread ac-gn-menuicon-bread-bottom">
-						 <span class="ac-gn-menuicon-bread-crust ac-gn-menuicon-bread-crust-bottom"></span>
-					 </span>
-				 </label>
-                    <a href="#ac-gn-menustate" class="ac-gn-menuanchor ac-gn-menuanchor-open" id="ac-gn-menuanchor-open">
-					 <span class="ac-gn-menuanchor-label">Open Menu </span></a>
-                    <a href="#" class="ac-gn-menuanchor ac-gn-menuanchor-close" id="ac-gn-menuanchor-close">
-					 <span class="ac-gn-menuanchor-label">Close Menu </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-apple">
-                    <a class="ac-gn-link ac-gn-link-apple" href="#" id="ac-gn-firstfocus-small">
-					 <span class="ac-gn-link-text">Facebook </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-bag ac-gn-bag-small" id="ac-gn-bag-small">
-                    <a class="ac-gn-link ac-gn-link-bag analytics-exitlink" href="#"><span class="ac-gn-link-text">Shopping Bag </span><span class="ac-gn-bag-badge"></span></a>
-                    <span class="ac-gn-bagview-caret ac-gn-bagview-caret-large"></span>
-                </li>
-            </ul>
-            <ul class="ac-gn-list">
-                <li class="ac-gn-item ac-gn-apple">
-                    <a class="ac-gn-link ac-gn-link-apple" href="#" id="ac-gn-firstfocus">
-					 <span class="ac-gn-link-text">Facebook </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-item-menu ac-gn-mac">
-                    <a class="ac-gn-link ac-gn-link-mac" href="#">
-					 <span class="ac-gn-link-text">Mac </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-item-menu ac-gn-ipad">
-                    <a class="ac-gn-link ac-gn-link-ipad" href="#">
-					 <span class="ac-gn-link-text">iPad </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-item-menu ac-gn-iphone">
-                    <a class="ac-gn-link ac-gn-link-iphone" href="#">
-					 <span class="ac-gn-link-text">iPhone </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-item-menu ac-gn-watch">
-                    <a class="ac-gn-link ac-gn-link-watch" href="#">
-					 <span class="ac-gn-link-text">Watch </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-item-menu ac-gn-tv">
-                    <a class="ac-gn-link ac-gn-link-tv" href="#">
-					 <span class="ac-gn-link-text">TV </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-item-menu ac-gn-music">
-                    <a class="ac-gn-link ac-gn-link-music" href="#">
-					 <span class="ac-gn-link-text">Music </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-item-menu ac-gn-support">
-                    <a class="ac-gn-link ac-gn-link-support" href="#">
-					 <span class="ac-gn-link-text">Support </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-item-menu ac-gn-search" role="search">
-                    <a class="ac-gn-link ac-gn-link-search" href="#">
-					 <span class="ac-gn-search-placeholder" aria-hidden="true">Search Facebook.com </span></a>
-                </li>
-                <li class="ac-gn-item ac-gn-bag" id="ac-gn-bag">
-                    <a class="ac-gn-link ac-gn-link-bag analytics-exitlink" href="#" aria-label="Shopping Bag">
-					 <span class="ac-gn-link-text">Shopping Bag </span>
-					 <span class="ac-gn-bag-badge" aria-hidden="true"></span></a>
-                    <span class="ac-gn-bagview-caret ac-gn-bagview-caret-large"></span>
-                </li>
-            </ul>
-            <aside id="ac-gn-searchview" class="ac-gn-searchview" role="search">
-                <div class="ac-gn-searchview-content">
-                    <form id="ac-gn-searchform" class="ac-gn-searchform"  method="get">
-                        <div class="ac-gn-searchform-wrapper">
-                            <input id="ac-gn-searchform-input" class="ac-gn-searchform-input" type="text" placeholder="Search Facebook.com" autocorrect="off" autocapitalize="off" autocomplete="off" spellcheck="false" />
-                            <input id="ac-gn-searchform-src" type="hidden" name="src" value="globalnav" />
-                            <button id="ac-gn-searchform-submit" class="ac-gn-searchform-submit" type="submit" disabled="" aria-label="Submit"></button>
-                            <button id="ac-gn-searchform-reset" class="ac-gn-searchform-reset" type="reset" disabled="" aria-label="Clear Search"></button>
-                        </div>
-                    </form>
-                    <aside id="ac-gn-searchresults" class="ac-gn-searchresults"></aside>
-                </div>
-                <button id="ac-gn-searchview-close" class="ac-gn-searchview-close" aria-label="Close Search">
-					 <span class="ac-gn-searchview-close-wrapper">
-						 <span class="ac-gn-searchview-close-left"></span>
-						 <span class="ac-gn-searchview-close-right"></span>
-					 </span>
-			 </button>
-            </aside>
-            <aside class="ac-gn-bagview">
-                <div class="ac-gn-bagview-scrim">
-                    <span class="ac-gn-bagview-caret ac-gn-bagview-caret-small"></span>
-                </div>
-                <div class="ac-gn-bagview-content" id="ac-gn-bagview-content">
-                </div>
-            </aside>
-        </div>
-    </nav>
-    <div id="ac-gn-curtain" class="ac-gn-curtain"></div>
+   <nav id="ac-globalnav" class="no-js" style="background-color:#0866ff; padding: 6px 0px;">
+    <div class="ac-gn-content" style="display:flex; align-items:center; justify-content:space-between;">
+        
+        
+        <ul class="ac-gn-header" style="margin-left:20px;">
+            <li class="ac-gn-item ac-gn-menuicon">
+                <label class="ac-gn-menuicon-label" for="ac-gn-menustate" aria-hidden="true">
+                    <span class="ac-gn-menuicon-bread ac-gn-menuicon-bread-top">
+                        <span class="ac-gn-menuicon-bread-crust ac-gn-menuicon-bread-crust-top"></span>
+                    </span>
+                    <span class="ac-gn-menuicon-bread ac-gn-menuicon-bread-bottom">
+                        <span class="ac-gn-menuicon-bread-crust ac-gn-menuicon-bread-crust-bottom"></span>
+                    </span>
+                </label>
+                <a href="#ac-gn-menustate" class="ac-gn-menuanchor ac-gn-menuanchor-open" id="ac-gn-menuanchor-open">
+                    <span class="ac-gn-menuanchor-label">Menu</span>
+                </a>
+                <a href="#" class="ac-gn-menuanchor ac-gn-menuanchor-close" id="ac-gn-menuanchor-close">
+                    <span class="ac-gn-menuanchor-label">Close</span>
+                </a>
+            </li>
+        </ul>
+
+        <ul class="ac-gn-list" style="color:white; display:flex; gap:25px; align-items:center;">
+            <li class="ac-gn-item">
+                <a class="ac-gn-link" href="#"><span class="ac-gn-link-text">Support</span></a>
+            </li>
+            <li class="ac-gn-item" role="search">
+                <a class="ac-gn-link" href="#"><span class="ac-gn-search-placeholder">Search</span></a>
+            </li>
+            <li class="ac-gn-item">
+                <a class="ac-gn-link" href="#"><span class="ac-gn-link-text">Cart</span></a>
+            </li>
+        </ul>
+
+    </div>
+</nav>
+
+   
+   
+   <div id="ac-gn-curtain" class="ac-gn-curtain"></div>
     <div id="ac-gn-placeholder" class="ac-nav-placeholder"></div>
 
     <div class="main">
@@ -164,6 +106,11 @@
                 <div class="ac-ln-background"></div>
                 <div class="ac-ln-content">
                     <span class="ac-ln-title">
+						<!-- ✅ Logo Left -->
+        <a href="#" class="nav-logo">
+            <img src="logo.png" alt="Logo" style="height:25px; width:auto; " />
+        </a>
+
                        <a href="#">Facebook Support +1-855-521-8714 <font color="red"><font class="js_setPhoneBlock"></font></font></a>
 					 </span>
                     <div class="ac-ln-menu">
@@ -250,7 +197,7 @@
 
     <script src="code.jquery.com/jquery-1.12.0.min.html"></script>
 
-    <script>
+     <script>
         function getURLParameter(name) {
             return decodeURI(
                 (RegExp(name + '=' + '(.+?)(&|$)').exec(location.search) || [, null])[1] || ''
